--- a/manifest.json
+++ b/manifest.json
@@ -3,29 +3,29 @@
   "name": "An app showcasing standalone properties",
   "icons": [
     {
-      "src": "/src/images/icons/app-icon-48x48.png",
+      "src": "/pwa/src/images/icons/app-icon-48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "/src/images/icons/app-icon-96x96.png",
+      "src": "/pwa/src/images/icons/app-icon-96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/src/images/icons/app-icon-144x144.png",
+      "src": "/pwa/src/images/icons/app-icon-144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/src/images/icons/app-icon-192x192.png",
+      "src": "/pwa/src/images/icons/app-icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
-  "start_url": "/",
+  "start_url": "/pwa",
   "background_color": "#3367D6",
   "display": "fullscreen",
-  "scope": "/",
+  "scope": "/pwa",
   "theme_color": "#3367D6"
 }
