--- a/manifest.json
+++ b/manifest.json
@@ -23,9 +23,9 @@
       "sizes": "192x192"
     }
   ],
-  "start_url": "/pwa",
+  "start_url": "/pwa/",
   "background_color": "#3367D6",
   "display": "fullscreen",
-  "scope": "/pwa",
+  "scope": "/pwa/",
   "theme_color": "#3367D6"
 }
