--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,31 @@
 {
-  "short_name": "Web App",
-  "name": "An app showcasing standalone properties",
+  "short_name": "LBS",
+  "name": "Lab booking system",
   "icons": [
     {
-      "src": "/pwa/src/images/icons/app-icon-48x48.png",
+      "src": "/pwa/src/images/icons/content_paste_black_48x48.png",
       "type": "image/png",
       "sizes": "48x48"
     },
     {
-      "src": "/pwa/src/images/icons/app-icon-96x96.png",
+      "src": "/pwa/src/images/icons/content_paste_black_96x96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/pwa/src/images/icons/app-icon-144x144.png",
+      "src": "/pwa/src/images/icons/content_paste_black_144x144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/pwa/src/images/icons/app-icon-192x192.png",
+      "src": "/pwa/src/images/icons/content_paste_black_192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     }
   ],
   "start_url": "/pwa/",
-  "background_color": "#3367D6",
+  "background_color": "#263238",
   "display": "fullscreen",
   "scope": "/pwa/",
-  "theme_color": "#3367D6"
+  "theme_color": "#263238"
 }
